<resources>
    <string name="app_name">Dinosaurs</string>
    <string name="dinasours">DİNOSAURS</string>
    <string name="turkish">TURKISH</string>
    <string name="englısh">ENGLISH</string>
    <string name="saurischialar">Saurischia</string>
    <string name="theropoda">Theropoda</string>
    <string name="sauropodomorpha">Sauropodomorpha</string>
    <string name="thecodontosaurus">Thecodontosaurus</string>
    <string name="riojasaurus">Riojasaurus</string>
    <string name="dinasours_voice">Dinasours Voice</string>
    <string name="string3">The Benton series classifies all dinosaurs,including the Amniota series,the Sauropsida class,the Diapsida upper class,the Archosauria division,the Avemetatarsalia upper division,the Ornithodiraara division,and the Dinosauria upper suite.</string>
    <string name="string4">Dinosauria was later divided into two teams,Saurischia and Orhithischia.Click the buttons for more information.</string>
    <string name="string6">Theropodas are carnivorous and the first.The stature can be maximum 10 meters.Allosaurus is the most recognizable species.They lived in North America 140 million years.Heads of Allosaurus are larger than the body.Its jaws are long and deep,teeth are wide and sharp.Allosaurus has three toes.Thumb provides the support task by turning back.The front members are short and robust.Suitable for use in nutritional function.But it is not conducive to support the body.</string>
    <string name="string7">Sauropoda walks on all fours.There are herbivorous and carnivorous ones.Sauropoda are the greatest representatives of dinasours.The best example of this group is Diplodocus.They are twenty-four meters long and weigh ten tons.His brain is the size of a human fist.The tails are very long and consist of more than 80 vertebrae.</string>
    <string name="string8">Ornithopoda are a group of ornithischian dinosaurs that started out as small,bipedal running grazers,and grew in size and numbers until they became one of the most successful groups of herbivores in the Cretaceous world,dominated the North American landscape.Ornihopodas beaks were designed to cut the vegetation grounded with molar teeth.Fabrosaurs were the oldest and most primitive of the ornithopods.</string>
    <string name="string9">Stegosauria is a group of herbivorous ornitis dinosaurs.The genus Stegosaurus,named after the group,is the most famous stegosaurian to date.All stegosaurus have special rows of bones called osteoderms,which become plates and spines along the back and tail.Many also have intermediate spines called plates.Huayangosaurus is the oldest and most basic member of Stegosauria.</string>
    <string name="string10">Ceratopsians consist of three lineage.Due to the development of a large,bony ruff that protects the head,neck and shoulders,it accounted for about one-third of the total length of the body.Triceratops is perhaps the best known member of the group.It was 5-6 m tall and had three horns protruding on one eye and one nose on the other.Ceratopsia are herbivorous dinosaur.</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="waited">Waıted</string>
    <string name="theropoda_voice">Theropoda voice:</string>
    <string name="sauropoda_voice">Sauropoda voice:</string>
    <string name="play_1">Play</string>
    <string name="stop_1">Stop</string>
    <string name="waited_1">Waıted</string>
    <string name="ornithopoda_voice">Ornithopoda_voice:</string>
    <string name="play_2">Play</string>
    <string name="stop_2">Stop</string>
    <string name="waited_2">Waıted</string>
    <string name="stegosauria_voice">Stegosauria voice:</string>
    <string name="play_3">Play</string>
    <string name="stop_3">Stop</string>
    <string name="waited_3">Waıted</string>
    <string name="ceratopsia_voice">Ceratopsia voice:</string>
    <string name="play_4">Play</string>
    <string name="stop_4">Stop</string>
    <string name="waited_4">Waıted</string>
    <string name="dinosaurs_images">Dinosaurs Images</string>
    <string name="theropoda_mages">Theropoda İmages:</string>
    <string name="sauropoda_mages">Sauropoda İmages:</string>
    <string name="ornithopoda_mages">Ornithopoda İmages:</string>
    <string name="stegosauria_mages">Stegosauria İmages:</string>
    <string name="ceratopsia_mages">Ceratopsia İmages:</string>
    <string name="str_1">Dinozorlar daha sonra Saurischia ve Orhithischia olmak üzere iki takıma ayrıldı. Daha fazla bilgi için düğmelere tıklayın.</string>
    <string name="str_2">Saurischia iki alt takıma ayrılmıştır, bunlar Theropoda ve Sauropodomorpha dır.Theropoda dört ara takıma ve Sauropodomorpha bir ara takıma ve iki aileye ayrılmıştır. Daha fazla bilgi için düğmelere tıklayın.</string>
    <string name="str_3">Ornithischia, Thyreophora ve Cerapoda olmak üzere iki alt takıma ayrılmıştır. Threophora iki ara takıma, Stegosauria ve Ankylosauriaya ayrılmıştır.Öte yandan,Cerapoda üç ara takıma ayrılmıştır.</string>
    <string name="dinazor_resimleri">Dinazor Resimleri</string>
    <string name="str_4">Saurischia is divided into two sub-teams,these is Theropoda and Sauropodomorpha.Theropoda is divided into four intermediate teams and Sauropodomorpha is divided into one intermediate team and two families.Click the buttons for more information.</string>
    <string name="sauropoda">Sauropoda</string>
    <string name="str_6">Ornithischia is divided into two sub-teams,Thyreophora and Cerapoda.Thyreophora is divided into two intermediate teams,Stegosauria and Ankylosauria.On the other hand,Cerapoda is divided into three intermediate teams:Pachycephalosauria,Ceratopsia and Ornithopoda.</string>
    <string name="str_7">Saurischian dinosaurs are traditionally distinguished from ornitischian dinosaurs by their three-way pelvic structure;The pelvis of the Ornithischians is arranged in parallel with the pubis,ischium,and also in a forward-looking process,rotated backwards,giving a four-way structure.The Saurischian hip structure called Seeley "lizard-hipped" dinosaurs because they preserved the hip-hip anatomy of ancestor found in modern lizards and other reptiles.The two main saurisch groups are Theropods and Sauropodomorphs.The plants of the Mesozoic Age were two-legged carnivores where birds developed at least 144 million years ago(Late or Middle Jurassic).</string>
    <string name="str_9">One of the oldest known dinosaurs,Herrerasaurus was also one of the largest carnivorous dinosaurs,6 m (20 ft) long and 800 pounds in weight.Herrerasaurus is a primitive animal compared to later dinosaurs,and despite its similarities,may not be a theropod.Instead,he and his species,Herrerasauridae,are basal saurchis and may have been the beginning of both the theropod and auropod lines.All Herrerasauridae have so far been found in North and South America,but the relationship of these dinosaurs with others is mysterious.Herrerasaurus already exhibited some of the features and characteristics that were observed in later dinosaurs,such as the backward-pointing pelvic pubic bone seen in dinosaurs and birds.The long narrow skull had a flexible joint on its lower jaw,so it could slide back and forth to give a gripping bite.This feature is unique among dinosaurs,but is found in some lizards.</string>
    <string name="ply_5">play</string>
    <string name="ply_6">stop</string>
    <string name="ply_7">waıted</string>
    <string name="ply_8">play</string>
    <string name="ply_9">stop</string>
    <string name="ply_10">waıted</string>
    <string name="str_10">Coelophysoidea were common dinosaurs of the Late Triassic and Early Jurassic periods.They were geographically widespread, probably living on all continents.All coelophysoids were thin and carnivorous forms, superficially similar to coelurosaurs, of which they were previously classified,and some species had delicate cranial peaks.They are approximately 1 to 6 m long.It is not known what type of outer cover colloid is found,and various artists have described them as scaly or feathery.</string>
    <string name="ply_11">play</string>
    <string name="ply_12">stop</string>
    <string name="ply_13">waıted</string>
    <string name="str_11">Ceratosaurus remains have been found in North America and Tanzania, and possibly in Portugal. It is one of the rare theropods overshadowed by the more common Allosaurus in the Morrison Formation.An interesting feature of Ceratosaurus is the lines of osteoderms,increases bone growth,resembles a crocodile from the backs.The most famous feature of Ceratosaurus is the three horns, one under the nose and two above the eye. In fact, it was believed to be a dangerous weapon used to attack herbivores or opponents. Recent research has concluded that the horns are too blunt and fragile to be used as weapons, and possibly a display feature that helps attract friends. His four-toed arms were short but oddly muscular, and his teeth were the tallest in comparison to the skull, in some cases the tallest in comparison to the skull when crossing his lower jaw, which probably meant his jaw could open incredibly wide to swallow.He could probably use these teeth to cut the pit of larger prey. Ceratosaurus tail was very flexible and helped to swim,which could indicate that it was fed with water.</string>
    <string name="str_12">Tetanuras are theropod dinosaurs, a large variety of groups characterized by a number of features that many members have (based on these principles, we know that using these cladistic principles, those tetanurs that do not possess these characteristics must lose them throughout evolutionary history). One of these features is an extended menu (el), especially in subsequent coelurosaurs. Other typical features found in tetanurans include the loss of the fourth and fifth digits in the manuels (hands) and a less flexible tail.</string>
    <string name="ply_21">play</string>
    <string name="ply_16">waıted</string>
    <string name="ply_15">stop</string>
    <string name="str_13">Initially, a two-legged,four-legged graviportal gait developed as the elephants increased in size,adapted to slowly walk on land.Since the early sauropodomorphs were a carnivore with other saursian strains(theropods),they were probably omnivores as common ancestors.Therefore,the evolution of herbivorous has gone hand in hand with increasing dimensions and neck lengths.</string>
    <string name="str_14">Thecodontosaurus antiquus is a species of herbivorous basal sauropodomorph dinosaur that lived in the Late Triassic (Norian and / or Rhaet age). The remains are best known from the Triassic "fissure fillings" in Southern England. The Kodontosaurus was a small bipedal animal, about 2 m (6.5 ft) long. One of the first dinosaurs to be discovered and one of the oldest. Many species have been named in the genus, but only species of the species Thecondontosaurus antiquus are considered to be valid today.</string>
    <string name="ply_17">play</string>
    <string name="ply_18">stop</string>
    <string name="ply_19">waıted</string>
    <string name="str_15">Riojasaurus (meaning "Rioja lizard") was found in the Los Colorados Formation in the Ischigualasto-Villa Unión Basin by José Bonaparte, La Rioja Province in Argentina. He lived during the late Triassic (Norian stage) and grew about 10 meters (33 ft) tall.Riojasaurus the only known riojasaurid living in South America.</string>
</resources>