<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kahaki"
    tools:context=".English19Activity">

    <include
        layout="@layout/actionbar_app"
        android:id="@+id/actionbarEnglish19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionbarEnglish19">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
            <ImageView
                android:id="@+id/resim3"
                android:layout_width="match_parent"
                android:layout_height="335dp"
                android:layout_below="@id/actionbarEnglish19"
                android:layout_marginTop="0dp"
                android:src="@drawable/ornithopoda"
                />
            <TextView
                android:id="@+id/bilgi6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-5dp"
                android:textColor="@color/crimson"
                android:textSize="15sp"
                android:textStyle="italic"
                android:text="@string/string8"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ornithopoda_voice"
                android:textColor="@color/crimson"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/play_2"
                android:id="@+id/Btn7"
                android:layout_marginTop="10dp"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="-48sp"
                android:text="@string/stop_2"
                android:id="@+id/Btn8"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="-48sp"
                android:id="@+id/Btn9"
                android:text="@string/waited_2"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>