<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kahaki"
    tools:context=".English14Activity">

    <include
        layout="@layout/actionbar_app"
        android:id="@+id/actionbarEnglish14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionbarEnglish14">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
            <ImageView
                android:id="@+id/resim4"
                android:layout_width="match_parent"
                android:layout_height="335dp"
                android:layout_below="@id/actionbarEnglish14"
                android:layout_marginTop="0dp"
                android:src="@drawable/stegosauria"
                />
            <TextView
                android:id="@+id/bilgi7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-5dp"
                android:textColor="@color/crimson"
                android:textSize="15sp"
                android:textStyle="italic"
                android:text="@string/string9"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stegosauria_voice"
                android:textColor="@color/crimson"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/Btn10"
                android:text="@string/play_3"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="-48sp"
                android:id="@+id/Btn11"
                android:text="@string/stop_3"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="-48sp"
                android:id="@+id/Btn12"
                android:text="@string/waited_3"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>