<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kahaki"
    tools:context=".English3Activity">

    <include
        layout="@layout/actionbar_app"
        android:id="@+id/actionbarEnglish3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionbarEnglish3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
            <ImageView
                android:id="@+id/resim1"
                android:layout_width="match_parent"
                android:layout_height="335dp"
                android:layout_below="@id/actionbarEnglish3"
                android:layout_marginTop="0dp"
                android:src="@drawable/theropoda5" />
            <TextView
                android:id="@+id/bilgi4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/resim1"
                android:layout_marginTop="-5dp"
                android:text="@string/string6"
                android:textColor="@color/crimson"
                android:textSize="15sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theropoda_voice"
                android:textColor="@color/crimson"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:id="@+id/Btn1"
                android:layout_marginTop="10dp"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="-48sp"
                android:id="@+id/Btn2"
                android:text="@string/stop"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="-48sp"
                android:id="@+id/Btn3"
                android:text="@string/waited"
                />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>