<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kahaki"
    tools:context=".English18Activity">

    <include
        layout="@layout/actionbar_app"
        android:id="@+id/actionbarEnglish18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionbarEnglish18"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
            <ImageView
                android:id="@+id/resim5"
                android:layout_width="match_parent"
                android:layout_height="335dp"
                android:layout_below="@id/actionbarEnglish18"
                android:layout_marginTop="0dp"
                android:src="@drawable/ceratopsia"
                />
            <TextView
                android:id="@+id/bilgi8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-5dp"
                android:textColor="@color/crimson"
                android:textSize="15sp"
                android:textStyle="italic"
                android:text="@string/string10"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ceratopsia_voice"
                android:textColor="@color/crimson"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/Btn13"
                android:text="@string/play_4"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="-48sp"
                android:id="@+id/Btn14"
                android:text="@string/stop_4"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="-48sp"
                android:id="@+id/Btn15"
                android:text="@string/waited_4"
                />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>