<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kahaki"
    tools:context=".English11Activity">

    <include
        layout="@layout/actionbar_app"
        android:id="@+id/actionbarEnglish11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionbarEnglish11">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
            <ImageView
                android:id="@+id/resim2"
                android:layout_width="match_parent"
                android:layout_height="335dp"
                android:layout_below="@id/actionbarEnglish11"
                android:layout_marginTop="0dp"
                android:src="@drawable/sauropoda"
                />
            <TextView
                android:id="@+id/bilgi5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/resim2"
                android:layout_marginTop="-5dp"
                android:text="@string/string7"
                android:textColor="@color/crimson"
                android:textSize="15sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sauropoda_voice"
                android:textColor="@color/crimson"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/play_1"
                android:id="@+id/Btn4"
                android:layout_marginTop="10dp"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="-48sp"
                android:id="@+id/Btn5"
                android:text="@string/stop_1"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="-48sp"
                android:id="@+id/Btn6"
                android:text="@string/waited_1"
                />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>