<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kahaki"
    tools:context=".English5Activity">

    <include
        layout="@layout/actionbar_app"
        android:id="@+id/actionbarEnglish5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionbarEnglish5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
            <ImageView
                android:id="@+id/resim28"
                android:layout_width="match_parent"
                android:layout_height="335dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/coelophtsoidea"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/blg3"
                android:layout_marginTop="-5dp"
                android:textColor="@color/crimson"
                android:textStyle="italic"
                android:textSize="14sp"
                android:text="@string/str_10"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Coelophysoidea Voice:"
                android:textColor="@color/crimson"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/ply_8"
                android:id="@+id/Btn19"
                android:layout_marginTop="10dp"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="-48sp"
                android:id="@+id/Btn20"
                android:text="@string/ply_9"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="-48sp"
                android:id="@+id/Btn21"
                android:text="@string/ply_10"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>