<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kahaki"
    tools:context=".RiojasaurusActivity">

    <include
        layout="@layout/actionbar_app"
        android:id="@+id/actionbarRio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionbarRio"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/resim32"
                android:layout_width="match_parent"
                android:layout_height="335dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/riojasaurus2"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/blg4"
                android:layout_marginTop="-5dp"
                android:textColor="@color/crimson"
                android:textStyle="italic"
                android:textSize="13sp"
                android:text="@string/str_15"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Riojasaurus Voice:"
                android:textColor="@color/crimson"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/ply_17"
                android:id="@+id/Btn28"
                android:layout_marginTop="10dp"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="-48sp"
                android:id="@+id/Btn29"
                android:text="@string/ply_18"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="-48sp"
                android:id="@+id/Btn30"
                android:text="@string/ply_19"
                />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>